# mastering-scala3

./: .gitignore  README.md
call-c/: .scalafmt.conf  README.md  build.sbt
call-c-lib/cc/: CMakeLists.txt
call-c-lib/src/main/scala/: HelloWorld.scala  Main.scala
call-c/cc/: README.md
call-c/cc/src/: helloworld.c
call-rs/: .gitignore  README.md  build.sbt
call-rs/helloworld-rs/: Cargo.toml
call-rs/helloworld-rs/src/: lib.rs
call-rs/src/main/scala/: HelloWorld.scala  Main.scala
import-local-jar/: README.md  build.sbt  check.sh
import-remote-jar/: build.sbt
import-remote-jar/src/main/scala/: Main.scala
pack-as-jar/: build.sbt
pack-as-jar/src/main/scala/: HelloWorld.scala  Main.scala
package-then-run/: .gitignore  README.md  build.sbt
sbt-jni-cmake-quickstart/: README.md  build.sbt
sbt-jni-cmake-quickstart/core/: build.sbt
sbt-jni-cmake-quickstart/core/src/main/scala/: HelloWorld.scala  Main.scala
sbt-jni-cmake-quickstart/native/: CMakeLists.txt
sbt-jni-cmake-quickstart/native/include/: com_github_sammyne_helloworld_HelloWorld.h
sbt-jni-cmake-quickstart/native/src/: CMakeLists.txt  com_github_sammyne_helloworld_HelloWorld.c  helloworld.c
sbt-jni-rs-quickstart/: README.md
sbt-jni-rs-quickstart/core/src/main/scala/: HelloWorld.scala  Main.scala
sbt-jni-rs-quickstart/native/: Cargo.toml
sbt-jni-rs-quickstart/native/src/: lib.rs
with-java/: README.md  build.sbt
with-java/src/main/java/: Hello.java
with-java/src/main/java/hi/: World.java
with-java/src/main/scala/: Main.scala
